--- a/Moeller/HTML/our-services.html
+++ b/Moeller/HTML/our-services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Moeller Home Management | Our Services </title>
-	<meta name="viewport" content="width=device-width" initial-scale="1">
+<meta name="viewport" content="width=device-width" initial-scale="1">
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/services.css" media="screen">
 <script type="text/javascript" src="../js/main.js"></script> 
@@ -41,51 +41,51 @@
   </div>
 </nav>
 <div id="mainContainer">
-  <div id="BannerContainer">
-    <h1>Our Services</h1>
+<div id="BannerContainer">
+  <h1>Our Services</h1>
+</div>
+<div class="div-one"></div>
+<div id="membershipContainer">
+  <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
+    <h2 >Single projects or year round service;<br>
+      Either way, we've got you covered.</h2>
   </div>
-  <div class="div-one"></div>
-  <div id="membershipContainer">
-    <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
-      <h2 >Single projects or year round service;<br>
-        Either way, we've got you covered.</h2>
-    </div>
-    <div id="innerMembership">
-      <div id="card1" class="membershipCard">
-        <div id="cardImage1">
-          <h3>Standalone Services</h3>
-        </div>
-        <ul>
-          <li>A La Carte Services</li>
-          <li>Access to Licensed & Insured Subtractors</li>
-          <li>No Commitment</li>
-        </ul>
-        <a href="option1" align="center" class="btnContain">
-        <button onclick="jump()" class="svcButton">View Services</button>
-        </a> </div>
-      <div id="card2" class="membershipCard">
-        <div id="cardImage2">
-          <h3>Moeller Home Membership</h3>
-        </div>
-        <ul>
-          <li>24/7 One-Call Service </li>
-          <li>Recurring Services Scheduling</li>
-          <li>Access to Licensed & Insured Subtractors</li>
-          <li>Consolidated Monthly Invoices</li>
-          <li>Monthly Walk-Through Inspection</li>
-          <li>Priority Appointment Scheduling</li>
-          <li>Lock and Leave Service</li>
-          <li>Light Bulb Replacement Labor</li>
-          <li>HVAC Filter Replacement Labor</li>
-          <li>Full Service Property Management</li>
-        </ul>
-        <a align="center" href="option1" class="btnContain">
-        <button onclick="jump()" class="svcButton">View Services</button>
-        </a> </div>
-    </div>
+  <div id="innerMembership">
+    <div id="card1" class="membershipCard">
+      <div id="cardImage1">
+        <h3>Standalone Services</h3>
+      </div>
+      <ul>
+        <li>A La Carte Services</li>
+        <li>Access to Licensed & Insured Subtractors</li>
+        <li>No Commitment</li>
+      </ul>
+      <a href="option1" align="center" class="btnContain">
+      <button onclick="jump()" class="svcButton">View Services</button>
+      </a> </div>
+    <div id="card2" class="membershipCard">
+      <div id="cardImage2">
+        <h3>Moeller Home Membership</h3>
+      </div>
+      <ul>
+        <li>24/7 One-Call Service </li>
+        <li>Recurring Services Scheduling</li>
+        <li>Access to Licensed & Insured Subtractors</li>
+        <li>Consolidated Monthly Invoices</li>
+        <li>Monthly Walk-Through Inspection</li>
+        <li>Priority Appointment Scheduling</li>
+        <li>Lock and Leave Service</li>
+        <li>Light Bulb Replacement Labor</li>
+        <li>HVAC Filter Replacement Labor</li>
+        <li>Full Service Property Management</li>
+      </ul>
+      <a align="center" href="option1" class="btnContain">
+      <button onclick="jump()" class="svcButton">View Services</button>
+      </a> </div>
   </div>
-  <div class="service" id="option1">
-	  <div class="serviceDiv">
+</div>
+<div class="service" id="option1">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Preventative Maintenance & Repair</h1>
       <ul>
@@ -93,37 +93,39 @@
         <li>General Carpentry</li>
         <li>Electrical</li>
         <li>Plumbing Appliances</li>
-        <li>Roofing  </li>
-        <li>Wallpaper  </li>
-        <li>Paint  </li>
-        <li>Flooring  </li>
-        <li>Fence  </li>
-        <li>Generator  </li>
+        <li>Roofing </li>
+        <li>Wallpaper </li>
+        <li>Paint </li>
+        <li>Flooring </li>
+        <li>Fence </li>
+        <li>Generator </li>
       </ul>
     </div>
     <div class="innerServiceImg" id="repairImg"></div>
-  </div></div>
-  <div class="service" id="option2">
-	  <div class="serviceDiv">
-      <div class="innerService">
-        <h1>Remodeling</h1>
-        <ul>
-          <li>House Keeping</li>
-          <li>Deep Cleaning </li>
-          <li>Duct Work</li>
-          <li>Power Washing</li>
-          <li>Five</li>
-          <li>One</li>
-          <li>Two</li>
-          <li>Three</li>
-          <li>Four</li>
-          <li>Five</li>
-        </ul>
-      </div>
-      <div class="innerServiceImg" id="remodelingImg"></div>
-  </div></div>
-  <div class="service" id="option3">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option2">
+  <div class="serviceDiv">
+    <div class="innerService">
+      <h1>Remodeling</h1>
+      <ul>
+        <li>House Keeping</li>
+        <li>Deep Cleaning </li>
+        <li>Duct Work</li>
+        <li>Power Washing</li>
+        <li>Five</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+      </ul>
+    </div>
+    <div class="innerServiceImg" id="remodelingImg"></div>
+  </div>
+</div>
+<div class="service" id="option3">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Interior Design</h1>
       <ul>
@@ -140,9 +142,10 @@
       </ul>
     </div>
     <div class="innerServiceImg" id="InteriorImg"></div>
-  </div></div>
-  <div class="service" id="option4">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option4">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Doors, Windows, & Siding</h1>
       <ul>
@@ -159,9 +162,10 @@
       </ul>
     </div>
     <div class="innerServiceImg" id="DoorImg"></div>
-  </div></div>
-  <div class="service" id="option5">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option5">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Painting & Staining</h1>
       <ul>
@@ -178,17 +182,18 @@
       </ul>
     </div>
     <div class="innerServiceImg" id="PaintingImg"></div>
-  </div></div>
-  <div class="service" id="option6">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option6">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Plumbing & Electrical</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
+        <li>Generator & Battery Backup </li>
+        <li> Heating & Misting Systems </li>
+        <li>Humidors</li>
+        <li>Fountains</li>
+        <li>Mold Remediation </li>
         <li>One</li>
         <li>Two</li>
         <li>Three</li>
@@ -197,91 +202,102 @@
       </ul>
     </div>
     <div class="innerServiceImg" id="PlumbingImg"></div>
-  </div></div>
-  <div class="service" id="option7">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option7">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Security Systems and Smart Home</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Network Setup</li>
+        <li>Wireless/Wired Security Systems </li>
+        <li>Servers</li>
+        <li>Home Automation</li>
+        <li>Locksmith Services</li>
+        <li>Fire/Smoke/CO2 Detectors</li>
+        <li>Fire Sprinklers</li>
+        <li>Security Lighting </li>
+        <li>Perimeter</li>
+        <li>Privacy Enclosures</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="SecurityImg"></div>
-  </div></div>
-  <div class="service" id="option8">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option8">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Audio/Video Solutions</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Television Mounting</li>
+        <li>Home Theater Design </li>
+        <li>Calibration</li>
+        <li>Wall and Ceiling Speaker Install</li>
+        <li>Cable Management</li>
+        <li>Furniture assembly</li>
+        <li>Networked Audio</li>
+        <li>Haul Away</li>
+        <li>Lighting Systems </li>
       </ul>
     </div>
     <div class="innerServiceImg" id="TheaterImg"></div>
-  </div></div>
-  <div class="service" id="option9">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option9">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Organization & Cleaning</h1>
       <ul>
-        <li>House Keeping</li>
+        <li>Housekeeping </li>
         <li>Deep Cleaning </li>
         <li>Duct Work</li>
         <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Window </li>
+        <li>Gutter </li>
+        <li>Chimney </li>
+        <li>Carpet/Rug </li>
+        <li>Upholstery </li>
+        <li>Natural Stone </li>
+        <li>Grill </li>
+        <li>Wood Reconditioning </li>
+        <li>Professional Organizing </li>
+        <li>COVID-19 Sanitization </li>
       </ul>
     </div>
     <div class="innerServiceImg" id="cleaningImg"></div>
-  </div></div>
-  <div class="service" id="option10">
-	  <div class="serviceDiv">
+  </div>
+</div>
+<div class="service" id="option10">
+  <div class="serviceDiv">
     <div class="innerService">
       <h1>Landscaping</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Landscape Lighting </li>
+        <li>Arborist Services </li>
+        <li>Fertilizer & Weed Control </li>
+        <li>Drainage Systems </li>
+        <li>Hardscapes </li>
+        <li>Irrigation </li>
+        <li>Mosquito Systems </li>
+        <li>Mowing & Trimming </li>
+        <li>Pest Control </li>
+        <li>Seasonal Color </li>
+        <li>Firewood </li>
       </ul>
     </div>
     <div class="innerServiceImg" id="LandscapingImg">.</div>
   </div>
 </div>
+<a href="../HTML/contact-us.html">
 <div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+</a>
 <div id="footer">
-   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+  <div id="footerContainer">
+    <div class="footerCol"> <a href="">
+      <h4>Services</h4>
+      </a>
       <ul>
-		 <a href="">
+        <a href="">
         <li>Maintenance/Repair</li>
         </a> <a href="">
         <li>Remodeling</li>
@@ -302,14 +318,21 @@
         </a>
       </ul>
     </div>
-    <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+    <div class="footerCol"> <a href="">
+      <h4>Our Company</h4>
+      </a>
       <ul>
-        <a href=""> <li>Our Story</li></a>
+        <a href="">
+        <li>Our Story</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <a href="">
+      <h4>Questions?</h4>
+      </a>
       <ul>
-         <a href=""><li>Contact Us</li></a>
+        <a href="">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
