--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 </div>
-<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+<a href="../HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div></a>
 <div id="footer">
    <div id="footerContainer">
     <div class="footerCol">
