--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width" initial-scale="1">	
-<title>Moeller Home Managment | Testimonials</title>
+<meta name="viewport" content="width=device-width" initial-scale="1">
+<title>Moeller Home Management | Testimonials</title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
-	<link rel="stylesheet" href="../CSS/testimonial.css" media="screen">
-		<script type="text/javascript" src="../js/main.js"></script>
+<link rel="stylesheet" href="../CSS/testimonial.css" media="screen">
+<script type="text/javascript" src="../js/main.js"></script> 
 <!--Google Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -42,19 +42,21 @@
 </nav>
 <div id="hiddenMenu"></div>
 <div id="mainContainer">
-	<div align="center" id="temp">
-<h1>Coming soon</h1>
-	<p>Check back soon for updates from our clients</p>
+  <div align="center" id="temp">
+    <h1>Coming soon</h1>
+    <p>Check back soon for updates from our clients</p>
+  </div>
 </div>
-	
-	</div>
-	<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+<a href="../HTML/contact-us.html">
+<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+</a>
 <div id="footer">
   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+    <div class="footerCol"> <a href="">
+      <h4>Services</h4>
+      </a>
       <ul>
-		 <a href="">
+        <a href="">
         <li>Maintenance/Repair</li>
         </a> <a href="">
         <li>Remodeling</li>
@@ -75,14 +77,21 @@
         </a>
       </ul>
     </div>
-    <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+    <div class="footerCol"> <a href="">
+      <h4>Our Company</h4>
+      </a>
       <ul>
-        <a href=""> <li>Our Story</li></a>
+        <a href="">
+        <li>Our Story</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <a href="">
+      <h4>Questions?</h4>
+      </a>
       <ul>
-         <a href=""><li>Contact Us</li></a>
+        <a href="">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
