--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1">	
-<title>Moeller Home Managment | Milwaukee's premium home improvment service </title>
+<title>Moeller Home Management | Contact Us </title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/contact.css" media="screen">
 		<script type="text/javascript" src="../js/main.js"></script>
