--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -41,7 +41,7 @@
 </nav>
 <div id="sliderCover">
   <div id="welcomeBanner" align="center"> <img src="images/noTextLogoWhite.png"/>
-    <h3 id="brand">Moeller Home Management</h3>
+    <h3 id="brand">Moeller Home Management LLC</h3>
 	  <h4>Concierge home solutions. <br>Peace of mind guaranteed.</h4>
   </div>
 </div>
@@ -67,12 +67,12 @@
       </div>
     </div>
     <div class="talkBtn">
-      <button class="btn">Let's Talk</button>
+      <a href="HTML/contact-us.html"><button class="btn">Let's Talk</button></a>
     </div>
   </div>
 </div>
 <div id="descContainer">
-  <h2 align="center">Home and Property Management that ensures <br><b>Peace of Mind</b> and complete satisfaction.</h2>
+  <h2 align="center">Home and Property Management that ensures <b>Peace of Mind</b> and complete satisfaction.</h2>
   <div id="innerDescContain">
     <div class="savings" id="level1">
       <h3>Your time is valuable</h3>
@@ -89,11 +89,11 @@ No more wasting countless hours going through lists of providers only to have th
       <p>No more stress and frustration around trying to find top quality providers for your home’s needs.  No more worrying if they will show up and if the work they are doing is actually the highest quality and done “right”.   You can trust the providers we have working in your home because they will only be in your home if we would let them work in our own homes.</p>
     </div>
     <div id="talkBtn">
-      <button class="btn">Let's TalK</button>
+      <a href="HTML/contact-us.html"><button class="btn">Let's Talk</button></a>
     </div>
   </div>
 </div>
-<div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div>
+<a href="HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div></a>
 <div id="footer">
    <div id="footerContainer">
     <div class="footerCol">
