--- a/Moeller/HTML/our-services.html
+++ b/Moeller/HTML/our-services.html
@@ -84,6 +84,13 @@
       </a> </div>
   </div>
 </div>
+	<div id="HPA">
+		<div id="innerHPA">
+	<h2>Let's Begin with our <b>Home Physical Analysis:</b></h2>
+	<p>Comprehensive Interior and exterior home and property inspection to identify areas of concern and develop a plan to prioritize issues and prevent expensive future repairs.</p>
+	</div></div>
+	
+	
 <div class="service" id="option1">
   <div class="serviceDiv">
     <div class="innerService">
@@ -109,16 +116,14 @@
     <div class="innerService">
       <h1>Remodeling</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Kitchen</li>
+        <li>Bathroom</li>
+        <li>Rec Room</li>
+        <li>Wine Cellars</li>
+        <li>Engineering</li>
+        <li>Architectural</li>
+        <li>Water Damage</li>
+        <li>Mold Remediation</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="remodelingImg"></div>
@@ -129,16 +134,17 @@
     <div class="innerService">
       <h1>Interior Design</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Space Planning</li>
+        <li>Furniture</li>
+        <li>Accents</li>
+        <li>Artwork</li>
+        <li>Finish Selections</li>
+        <li>Furniture Design</li>
+        <li>Window Treatments</li>
+        <li>Bedrooms</li>
+        <li>Kitchen</li>
+        <li>Bath</li>
+		  <li>Rec Room</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="InteriorImg"></div>
@@ -149,16 +155,15 @@
     <div class="innerService">
       <h1>Doors, Windows, & Siding</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Repair and Replace</li>
+        <li>Gutters</li>
+        <li>Roofing</li>
+        <li>Siding</li>
+        <li>Windows</li>
+        <li>Garage Doors</li>
+        <li>Masonry</li>
+        <li>Stucco</li>
+        <li>Chimney Repair</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="DoorImg"></div>
@@ -169,16 +174,10 @@
     <div class="innerService">
       <h1>Painting & Staining</h1>
       <ul>
-        <li>House Keeping</li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Five</li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Interior</li>
+        <li>Exterior</li>
+        <li>Drywall repair</li>
+        <li>Wallpaper</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="PaintingImg"></div>
@@ -189,16 +188,19 @@
     <div class="innerService">
       <h1>Plumbing & Electrical</h1>
       <ul>
-        <li>Generator & Battery Backup </li>
-        <li> Heating & Misting Systems </li>
-        <li>Humidors</li>
-        <li>Fountains</li>
-        <li>Mold Remediation </li>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
+        <li>Kitchen</li>
+        <li> Bath</li>
+        <li>Septic and Sewer</li>
+        <li>Renovations</li>
+        <li>New Electirical</li>
+        <li>Outlets and Switches</li>
+        <li>Add-on Power Runs</li>
+        <li>Heating</li>
+        <li>Air Conditioning</li>
+        <li>In-floor Heating</li>
+		     <li>Water Filtration</li>
+		     <li>Water Heater</li>
+		     <li>Battery Backup</li>
       </ul>
     </div>
     <div class="innerServiceImg" id="PlumbingImg"></div>
@@ -209,9 +211,8 @@
     <div class="innerService">
       <h1>Security Systems and Smart Home</h1>
       <ul>
-        <li>Network Setup</li>
-        <li>Wireless/Wired Security Systems </li>
-        <li>Servers</li>
+        <li>Indoor and Outdoor</li>
+        <li>Wireless/Wired Security Systems</li>
         <li>Home Automation</li>
         <li>Locksmith Services</li>
         <li>Fire/Smoke/CO2 Detectors</li>
@@ -288,6 +289,12 @@
     <div class="innerServiceImg" id="LandscapingImg">.</div>
   </div>
 </div>
+	<div id="contactBanner2">
+	<div id="innerContactBanner2">
+		<h2>Need something else?</h2>
+		<a href="HTML/contact-us.html"><button class="btn2">Let's Talk</button></a>
+		</div>
+	</div>
 <a href="../HTML/contact-us.html">
 <div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
 </a>
