--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -63,7 +63,12 @@
       <div id="profileDesc">
         <h3>Meet the Owner</h3>
         <h4>Bill Moeller</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum pretium tincidunt. Sed bibendum tempor lectus et imperdiet. Aliquam erat volutpat. Praesent dignissim bibendum dui, vel posuere odio laoreet at.</p>
+        <p>My passion is helping others.  At Moeller Home Management, I get to live this through being the single point of contact for my clients with regards to all their home and property needs.  I ensure each of my clients is delighted with my prompt and professional service, excellent communication and especially by the highest quality craftsmanship in every project we undertake.<Br><br>
+  
+With an extensive background in home remodeling, project management, appliance and home electronic sales and installation, I have worked with some of the finest craftsman in their respective fields and you can count on them to provide the best possible solution for your project.  <Br><br>
+
+My goal is to give you complete peace of mind in knowing that you can not only trust me, but you will be able to trust my network of providers as well.  They will not be in your home if I wouldn’t have them in mine.
+</p>
       </div>
     </div>
   </div>
